@@ -1,45 +1,42 @@
 package com.azulCRM.pages;
-import org.openqa.selenium.By;
+
+import com.azulCRM.utilities.Driver;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
+import org.openqa.selenium.support.PageFactory;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class EmployeesPage extends BasePage {
 
-    WebDriver driver;
 
-    @FindBy(css = ".module-item")  // Update this locator to match your app's HTML structure
-    private List<WebElement> moduleElements;
+    @FindBy(xpath = "//a[@title='Employees']")
+    public WebElement employeesPageButton;
 
-    @FindBy(css = ".active-module")  // Locator for the active module
-    private WebElement activeModule;
+    @FindBy(css = ".main-buttons-item")
+    private List<WebElement> modules;
 
-    public EmployeesPage(WebDriver driver) {
-        this.driver = driver;
+    @FindBy(id = "companyStructure")
+    private WebElement companyStructure;
+
+    public EmployeesPage() {
+        PageFactory.initElements(Driver.getDriver(),this);
     }
 
-    public void navigateToPage(String pageName) {
-        driver.findElement(By.linkText(pageName)).click();
+
+    public void clickEmployeesPageButton() {
+            employeesPageButton.click();
     }
 
+    public boolean isCompanyStructureVisible() {
+       return companyStructure.isDisplayed();
+
+    }
     public List<String> getModuleNames() {
-        return moduleElements.stream()
-                .map(WebElement::getText)
-                .collect(Collectors.toList());
+        return modules.stream().map(WebElement::getText).toList();
     }
 
-    public void clickOnModule(String moduleName) {
-        for (WebElement module : moduleElements) {
-            if (module.getText().equals(moduleName)) {
-                module.click();
-                break;
-            }
-        }
-    }
-
-    public String getActiveModuleName() {
-        return activeModule.getText();
-    }
 }
+
+
